Fixed z-index of pins.

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -12,10 +12,14 @@
   font-family: "Montser"
 }
 
+.mapboxgl-marker {
+  z-index: 1;
+}
 .mapboxgl-popup {
   width: 100%;
   height: 100%;
   transform: none !important;
+  z-index: 2;
 }
 .mapboxgl-popup .mapboxgl-popup-tip {
   display: none;
